--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ nav ul li a{
     align-items: center;
     color: var(--def_color);
     text-decoration: none;
-    font-size: 1.6rem;
+    font-size: 180%;
     overflow: hidden;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     position: relative;
@@ -126,7 +126,7 @@ nav ul li a:hover::after{
     /* background-color: red; */
 }
 .main_content .main_content_text h1{
-    font-size: 6rem;
+    font-size: 600%;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     width: 60%;
     text-align: center;
@@ -159,7 +159,7 @@ nav ul li a:hover::after{
 .main_content .main_content_button .button a button{
     height: 80%;
     width: 100%;
-    font-size: 2.6rem;
+    font-size: 200%;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-weight: 600;
     border-radius: 10px;
@@ -170,7 +170,7 @@ nav ul li a:hover::after{
 .main_content .main_content_button .button button:active{
     height: 70%;
     width: 90%;
-    font-size: 2.1rem;
+    font-size: 100%;
     border: 5px;
 }
 .main_content .main_content_button .button button:hover:active{
@@ -194,7 +194,7 @@ nav ul li a:hover::after{
     /* background-color: red; */
 }
 .footer_content .footer_content_left h6{
-    font-size: 1.5rem;
+    font-size: 200%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
@@ -218,11 +218,11 @@ nav ul li a:hover::after{
 }
 .footer_content .footer_content_right i{
     margin: 10px;
-    font-size: 3rem;
+    font-size: 400%;
     transition: all .08s ease-in-out;
 }
 .footer_content .footer_content_right i:active{
-    font-size: 2rem;
+    font-size: 200%;
 }
 
 
@@ -251,13 +251,8 @@ nav ul li a:hover::after{
     }
     
     .footer_content .footer_content_right i{
-        margin: 10px;
-        font-size: 2.5rem;
         transition: all .1s ease-in-out;
     }
-    .footer_content .footer_content_right i:active{
-        font-size: 1.5rem;
-    } 
 }
 @media screen and (min-width: 720px) and (max-width: 1079px){
     header,footer{
@@ -291,19 +286,19 @@ nav ul li a:hover::after{
         width: 40%;
         /* background-color: red; */
     }
-    .footer_content .footer_content_left h6{
+    /* .footer_content .footer_content_left h6{
         font-size: 1.3rem;
-    }
+    } */
     
     .footer_content .footer_content_right{
         width: 35%;
     }
-    .footer_content .footer_content_right i{
+    /* .footer_content .footer_content_right i{
         font-size: 2.6rem;
     }
     .footer_content .footer_content_right i:active{
         font-size: 1.2rem;
-    }
+    } */
     
 }
 @media screen and (min-width: 480px) and (max-width: 719px){
@@ -338,11 +333,11 @@ nav ul li a:hover::after{
 
     .main_content .main_content_button .button a button{
         height: 60%;
-        font-size: 2rem;
+        /* font-size: 2rem; */
     }
-    .main_content .main_content_button .button button:active{
+    /* .main_content .main_content_button .button button:active{
         font-size: 1rem;
-    }
+    } */
     
     
     
@@ -362,12 +357,12 @@ nav ul li a:hover::after{
         width: 30%;
         /* background-color: blue; */
     }
-    .footer_content .footer_content_right i{
+    /* .footer_content .footer_content_right i{
         font-size: 2.4rem;
     }
     .footer_content .footer_content_right i:active{
         font-size: 1rem;
-    }
+    } */
 }
 @media screen and (min-width: 240px) and (max-width: 479px){
     header,footer{
@@ -397,7 +392,7 @@ nav ul li a:hover::after{
 
 
     .main_content .main_content_text h1{
-        font-size: 3rem;
+        /* font-size: 3rem; */
         width: 98%;
         /* background-color: blue; */
     }
@@ -423,7 +418,7 @@ nav ul li a:hover::after{
         /* background-color: red; */
     }
     .footer_content .footer_content_left h6{
-        font-size: .7rem;
+        font-size: 100%;
     }
     
     .footer_content .footer_content_right{
@@ -436,11 +431,11 @@ nav ul li a:hover::after{
     }
     .footer_content .footer_content_right i{
         margin: 10px;
-        font-size: 1.6rem;
+        /* font-size: 1.6rem; */
         transition: all .08s ease-in-out;
     }
-    .footer_content .footer_content_right i:active{
-        font-size: .1rem;
-    }
+    /* .footer_content .footer_content_right i:active{
+        font-size: .1rem; 
+    } */
     
 }
