--- a/style.css
+++ b/style.css
@@ -431,7 +431,7 @@ nav ul li a:hover::after{
     }
     .footer_content .footer_content_right i{
         margin: 10px;
-        /* font-size: 1.6rem; */
+        font-size: 100%;
         transition: all .08s ease-in-out;
     }
     /* .footer_content .footer_content_right i:active{
